--- a/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
+++ b/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PTW-a7-PX5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15400"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,12 +10,12 @@
         <scene sceneID="rMf-ZJ-Kbr">
             <objects>
                 <tableViewController id="PTW-a7-PX5" customClass="AddressBookViewController" customModule="AddressBookApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="olQ-kF-oeW">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="olQ-kF-oeW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="nzk-vC-zWd">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddressCell" rowHeight="90" id="nzk-vC-zWd" customClass="AddressCell" customModule="AddressBookApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nzk-vC-zWd" id="DWs-gh-YnG">
@@ -24,6 +24,7 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jrc-p6-dWT">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="jrc-p6-dWT" secondAttribute="height" multiplier="1:1" id="yjq-Qd-Fwe"/>
                                             </constraints>
@@ -48,6 +49,7 @@
                                         </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="jrc-p6-dWT" firstAttribute="height" secondItem="DWs-gh-YnG" secondAttribute="height" id="0VA-wH-KWK"/>
                                         <constraint firstAttribute="trailing" secondItem="rWe-9u-F0X" secondAttribute="trailing" constant="16" id="9UQ-ia-40h"/>
                                         <constraint firstItem="7Fz-ba-eX4" firstAttribute="leading" secondItem="jrc-p6-dWT" secondAttribute="trailing" constant="8" id="CIt-WH-VfQ"/>
                                         <constraint firstItem="jrc-p6-dWT" firstAttribute="top" secondItem="DWs-gh-YnG" secondAttribute="top" id="Hd8-dN-4bm"/>
@@ -57,12 +59,17 @@
                                         <constraint firstItem="jrc-p6-dWT" firstAttribute="leading" secondItem="DWs-gh-YnG" secondAttribute="leading" id="WEx-jR-wEM"/>
                                         <constraint firstItem="rWe-9u-F0X" firstAttribute="top" secondItem="7Fz-ba-eX4" secondAttribute="bottom" id="be5-jT-goT"/>
                                         <constraint firstItem="7Fz-ba-eX4" firstAttribute="height" secondItem="DWs-gh-YnG" secondAttribute="height" multiplier="2/3" id="eXc-vt-ZK1"/>
-                                        <constraint firstAttribute="bottom" secondItem="jrc-p6-dWT" secondAttribute="bottom" id="eqU-Nq-YcW"/>
                                         <constraint firstItem="rWe-9u-F0X" firstAttribute="leading" secondItem="jrc-p6-dWT" secondAttribute="trailing" constant="8" id="hd3-f6-wKS"/>
                                         <constraint firstItem="7Fz-ba-eX4" firstAttribute="top" secondItem="DWs-gh-YnG" secondAttribute="top" id="oe8-Dg-7tR"/>
                                         <constraint firstAttribute="trailing" secondItem="Bfa-tu-yq0" secondAttribute="trailing" constant="16" id="v5j-1J-XBw"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="emailLabel" destination="rWe-9u-F0X" id="P7v-X4-mAB"/>
+                                    <outlet property="nameLabel" destination="7Fz-ba-eX4" id="NXI-2w-ZdI"/>
+                                    <outlet property="profileImageView" destination="jrc-p6-dWT" id="Ht2-5J-SgW"/>
+                                    <outlet property="telLabel" destination="Bfa-tu-yq0" id="KN0-AE-Ptc"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
